--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,8 @@
     <h6 class="all-files-link" (click)="open(content)">View Processed Files</h6>
 </div>
 <div class="dropzone" [class.processing]="fileProcessing" appDnd (fileDropped)="fileChanged($event)">
-    <input type="file" *ngIf="!fileProcessing" (change)="fileChanged($event, true)">
+    <input type="file" *ngIf="!fileProcessing" (change)="fileChanged($event, true)"
+        accept="text/csv, .csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
     <svg xmlns="http://www.w3.org/2000/svg" width="80" height="135" viewBox="0 0 129 135" fill="none">
         <rect x="1.5" y="68.5" width="126" height="65" fill="white" stroke="black" stroke-width="3" />
         <rect x="49" y="41" width="30" height="69" fill="black" />
@@ -72,7 +73,7 @@
                         <td>{{idx + 1}}</td>
                         <td>{{file.fileName}}</td>
                         <td>{{file.status}}</td>
-                        <td class="download" (click)="download(file.fileId)">
+                        <td class="download" (click)="download(file.fileId, file.fileName)">
                             <div class="download-icon" *ngIf="file.status == 'DONE'">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 129 113"
                                     fill="none">
