--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -28,3 +28,10 @@ button {
     background-color: #6d8ebf;
     transform: skewy(-5deg);
 }
+
+.error-message {
+    color: red;
+    margin: auto;
+    margin-top: 10px;
+    text-align: center;
+}
