--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -96,12 +96,47 @@
     td,th{
       padding: 5px;
     }
+    td {
+      word-break: break-all;
+    }
     th {
       position: sticky;
       top: -1px;
       background-color: lightgray;
     }
   }
+}
+
+.options-container {
+  display: flex;
+  justify-content: space-around;
+  .option {
+    font-size: 20px;
+    font-weight: 550;
+    padding: 10px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 1px 1px 3px lightgray;
+    transition: transform 0.2s;
+    transform: translateY(0px);
+    &:hover {
+      transform: translateY(-10px);
+    }
+  }
+}
+
+.upload-btn {
+  display: block;
+  margin: auto;
+}
+
+.ng-invalid {
+  border-left: 5px solid red;
+}
+
+.ng-valid {
+  border-left: 5px solid green;
 }
 
 .processing {
