--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -25,7 +25,7 @@ button {
     right: 0px;
     bottom: -80px;
     height: 200px;
-    background-color: #6d8ebf;
+    background-color: rgba(5, 25, 70, 0.65);
     transform: skewy(-5deg);
 }
 
