--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,17 @@
     animation: spin 0.6s infinite linear;
 }
 
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    .logout {
+        cursor: pointer;
+        font-weight: bold;
+    }
+}
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
